fix some errors

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ option(MYDEBUG "enable test file compilation" ON)
 add_compile_options(-std=c++11 -Wall -g) 
 
 add_subdirectory (base)
+add_subdirectory (reactor)
