--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,16 @@ project (WebServer)
 option(MYDEBUG "enable test file compilation" ON)
 add_compile_options(-std=c++11 -Wall -g) 
 
+include_directories(${PROJECT_SOURCE_DIR}/base)
+include_directories(${PROJECT_SOURCE_DIR}/reactor)
+
+link_directories (${PROJECT_SOURCE_DIR}/lib)
+
 add_subdirectory (base)
 add_subdirectory (reactor)
+
+if (MYDEBUG)
+    add_subdirectory(tests)
+else()
+    message(STATUS "Currently don't compile tests file")    
+endif()
