--- a/reactor/CMakeLists.txt
+++ b/reactor/CMakeLists.txt
@@ -6,4 +6,4 @@ add_library(libserver_reactor ${LIB_SRC})
 target_link_libraries(libserver_reactor libserver_base)
 
 set_target_properties(libserver_reactor PROPERTIES OUTPUT_NAME "server_reactor")
-set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
+set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/lib)
