--- a/tests/reactor_test/CMakeLists.txt
+++ b/tests/reactor_test/CMakeLists.txt
@@ -10,4 +10,7 @@ target_link_libraries(EventLoop_test3 libserver_reactor)
 add_executable(EventLoop_test4 EventLoop_test4.cpp)
 target_link_libraries(EventLoop_test4 libserver_reactor)
 
+add_executable(EventLoop_test5 EventLoop_test5.cpp)
+target_link_libraries(EventLoop_test5 libserver_reactor)
+
 set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
