--- a/reactor/CMakeLists.txt
+++ b/reactor/CMakeLists.txt
@@ -1,8 +1,12 @@
 set(LIB_SRC
+    Acceptor.cpp
     Channel.cpp
     EventLoop.cpp
     EventLoopThread.cpp
+    InetAddress.cpp
     Poller.cpp
+    Socket.cpp
+    SocketsOps.cpp
     Timer.cpp
     TimerQueue.cpp
 )
