--- a/tests/reactor_test/CMakeLists.txt
+++ b/tests/reactor_test/CMakeLists.txt
@@ -25,4 +25,7 @@ target_link_libraries(TcpConnection_test1 libserver_reactor)
 add_executable(TcpConnection_test2 TcpConnection_test2.cpp)
 target_link_libraries(TcpConnection_test2 libserver_reactor)
 
+add_executable(TcpConnection_test3 TcpConnection_test3.cpp)
+target_link_libraries(TcpConnection_test3 libserver_reactor)
+
 set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/build/bin)
