add connector module and cancel timer

--- a/reactor/CMakeLists.txt
+++ b/reactor/CMakeLists.txt
@@ -2,6 +2,7 @@ set(LIB_SRC
     Acceptor.cpp
     Buffer.cpp
     Channel.cpp
+    Connector.cpp
     EventLoop.cpp
     EventLoopThread.cpp
     EventLoopThreadPool.cpp
