add TcpClient module

--- a/reactor/CMakeLists.txt
+++ b/reactor/CMakeLists.txt
@@ -11,6 +11,7 @@ set(LIB_SRC
     Socket.cpp
     SocketsOps.cpp
     TcpConnection.cpp
+    TcpClient.cpp
     TcpServer.cpp
     Timer.cpp
     TimerQueue.cpp
