timing wheel module

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,4 @@ add_subdirectory (base_test)
 add_subdirectory (reactor_test)
 add_subdirectory (chat)
 add_subdirectory (maxconnection)
+add_subdirectory (idleconnection)
