add Http Server module

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory (reactor_test)
 add_subdirectory (chat)
 add_subdirectory (maxconnection)
 add_subdirectory (idleconnection)
+add_subdirectory (http)
